--- a/src/styles/base/_global.scss
+++ b/src/styles/base/_global.scss
@@ -52,17 +52,19 @@ input,
 button,
 textarea,
 a {
+  --outlineClr: currentColor;
+
   outline-width: 2px;
   outline-color: transparent;
 
   &:focus-visible {
-    outline-color: currentColor;
+    outline-color: var(--outlineClr);
     text-decoration: none;
   }
 
   @supports not selector(:focus-visible) {
     &:focus {
-      outline-color: currentColor;
+      outline-color: var(--outlineClr);
       text-decoration: none;
     }
   }
@@ -126,6 +128,7 @@ strong {
 
 fieldset {
   border: none;
+  padding: 0;
 
   legend {
     @include screenReaderOnly();
